--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "spatie/pdf-to-image": "^2.1",
         "spatie/pdf-to-text": "^1.4",
         "thiagoalessio/tesseract_ocr": "^2.12"
